--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "elastic-rethinkdb",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A wrapper to help people connect rethinkdb to elastic search, also provide some tools for manipulate data.",
   "main": "lib/elasticsearch.js",
   "scripts": {
     "test": "mocha --require utils/mochaBabel __test__/elasticsearch",
     "build": "babel src --out-dir lib",
-    "prepublish": "npm run build"
+    "clean": "rimraf lib dist coverage",
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "chai": "^3.3.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "rimraf": "^2.4.3"
   },
   "dependencies": {
     "node-fetch": "^1.3.3"
